<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.zhangye.im.widget.CircleImageView
        android:id="@id/iv_photo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@null"
        android:src="@mipmap/rt_head" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/iv_photo"
        android:layout_toStartOf="@id/btn_yes"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/defalut"
            android:textSize="20sp" />


        <TextView
            android:id="@id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/defalut"
            android:textSize="12sp" />
    </LinearLayout>

    <Button
        android:id="@id/btn_yes"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_toStartOf="@id/btn_no"
        android:layout_centerVertical="true"
        android:text="@string/yes"/>


    <Button
        android:id="@id/btn_no"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/no"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/iv_photo"
        android:background="@color/line_gray" />
</RelativeLayout>